# eversource_cicd_demo

./: .gitignore  .python-version  databricks.yml  pyproject.toml
.github/workflows/: main.yml
resources/: gguitart_bronze_job.yml  gguitart_wheel_job.yml  load_range.pipeline.yml
src/gg_spark_wheel/: __init__.py  main.py
src/pipelines/: Streaming_SQL.ipynb  x_static_table_silver.ipynb
tests/: test_gguitart_spark.py
